--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "t4web/site-config",
     "description": "Admin module for ZF2. Provide key-value storage and visualization configuration",
     "type": "library",
-    "license": "GNU-GPL-2",
+    "license": "BSD-3-Clause",
     "keywords": [
         "zf2"
     ],
