--- a/composer.json
+++ b/composer.json
@@ -35,9 +35,9 @@
   "autoload": {
     "psr-0": {
       "T4webSiteConfig": "src/",
-      "T4webSiteConfig\\UnitTest": "tests/UnitTest/",
-      "T4webSiteConfig\\FunctionalTest": "tests/FunctionalTest/",
-      "T4webSiteConfig\\AcceptanceTest": "tests/AcceptanceTest/"
+      "T4webSiteConfigTest\\UnitTest": "tests/UnitTest/",
+      "T4webSiteConfigTest\\FunctionalTest": "tests/FunctionalTest/",
+      "T4webSiteConfigTest\\AcceptanceTest": "tests/AcceptanceTest/"
     },
     "classmap": [
       "./Module.php"
