--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,8 @@
     }
   ],
   "require": {
-    "php": ">=5.4.0",
-    "zendframework/zendframework": "2.4.*",
+    "php": ">=5.4.42",
+    "zendframework/zendframework": "~2.5.0",
     "league/flysystem": "0.5.*",
     "falc/flysystem-local-symlink-plugin": "1.0.*",
     "t4web/base": "dev-master"
