--- a/composer.json
+++ b/composer.json
@@ -28,10 +28,10 @@
     "zendframework/zend-servicemanager": "~2.5.0",
     "zendframework/zend-view": "~2.5.0",
 
-    "sebaks/crud": "dev-master",
-    "t4web/domain-module": "dev-master",
+    "sebaks/crud": "~1.0.4",
+    "t4web/domain-module": "~1.0.0",
 
-    "t4web/filter": "dev-master"
+    "t4web/filter": "~1.0.0"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.5"
