--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
     "zendframework/zend-servicemanager": "~2.5.0",
     "zendframework/zend-view": "~2.5.0",
     
-    "falc/flysystem-local-symlink-plugin": "1.*"
+    "falc/flysystem-local-symlink-plugin": "1.*",
 
     "sebaks/crud": "~1.0.4",
     "t4web/domain-module": "~1.0.0",
