--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "t4web/site-config",
-  "description": "Admin module for ZF2. Provide key-value storage and visualization configuration",
+  "description": "Admin module for ZF2. Provide key-value configuration",
   "type": "library",
   "license": "BSD-3-Clause",
   "keywords": [
@@ -19,38 +19,20 @@
   "require": {
     "php": ">=5.5.0",
 
-    "zendframework/zend-config": "~2.5.0",
-    "zendframework/zend-console": "~2.5.0",
-    "zendframework/zend-db": "~2.5.0",
-    "zendframework/zend-loader": "~2.5.0",
-    "zendframework/zend-modulemanager": "~2.5.0",
-    "zendframework/zend-mvc": "~2.5.0",
-    "zendframework/zend-servicemanager": "~2.5.0",
-    "zendframework/zend-view": "~2.5.0",
-    
-    "falc/flysystem-local-symlink-plugin": "1.*",
+    "zendframework/zend-console": "<2.6 >=2.4",
+    "zendframework/zend-db": "<2.6 >=2.4",
+    "zendframework/zend-modulemanager": "<2.6 >=2.4",
+    "zendframework/zend-mvc": "<2.6 >=2.4",
 
-    "sebaks/crud": "~1.0.4",
-    "t4web/domain-module": "~1.0.0",
-    "t4web/filter": "~1.0.0"
+    "t4web/default-service": "~1.0.0",
+    "t4web/domain": "~1.1.2"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.5"
   },
   "autoload": {
-    "psr-0": {
-      "T4webSiteConfig": "src/",
-      "T4webSiteConfigTest\\UnitTest": "tests/UnitTest/",
-      "T4webSiteConfigTest\\FunctionalTest": "tests/FunctionalTest/",
-      "T4webSiteConfigTest\\AcceptanceTest": "tests/AcceptanceTest/"
-    },
-    "classmap": [
-      "./Module.php"
-    ]
-  },
-  "scripts": {
-    "post-update-cmd": [
-      "php public/index.php site-config init"
-    ]
+    "psr-4": {
+      "T4web\\SiteConfig\\": "src/"
+    }
   }
 }
